[gd_scene load_steps=6 format=2]

[ext_resource path="res://interactives/Sign.gd" type="Script" id=1]
[ext_resource path="res://assets/sign.png" type="Texture" id=2]
[ext_resource path="res://assets/manaspc.ttf" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[node name="Sign" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3
follow_viewport_enable = true

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
margin_left = -42.0
margin_top = -64.0
margin_right = 42.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "replace
text
here"
align = 1
valign = 2
percent_visible = -0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Type Delay" type="Timer" parent="."]
wait_time = 0.01
[connection signal="area_entered" from="." to="." method="_on_Sign_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Sign_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Sign_body_exited"]
[connection signal="timeout" from="Type Delay" to="." method="_on_Type_Delay_timeout"]
